--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack",
-    "dev": "webpack-dev-server --content-base build/",
-    "server": "server"
+    "dev": "webpack-dev-server --content-base build/ --history-api-fallback",
+    "server": "server",
+    "start": "node main.js"
   },
   "repository": {
     "type": "git",
@@ -20,22 +21,25 @@
   },
   "homepage": "https://github.com/sahirjamal/reactToDoListApp#readme",
   "dependencies": {
-    "axios": "^0.16.2",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "express": "^4.15.3",
+    "file-loader": "^0.11.2",
     "flexbox-react": "^4.4.0",
+    "history": "^4.6.3",
     "moment": "^2.18.1",
     "nodemon": "^1.11.0",
     "react": "^15.6.1",
-    "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
+    "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "react-toolbox": "^2.0.0-beta.12",
+    "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.7.2",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.71.3",
     "underscore": "^1.8.3",
     "webpack": "^2.7.0",
     "yelp-fusion": "^1.0.3"
