--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.71.3",
     "underscore": "^1.8.3",
+    "uuid": "^3.1.0",
     "webpack": "^2.7.0",
     "yelp-fusion": "^1.0.3"
   },
