--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "file-loader": "^0.11.2",
+    "firebase": "^4.3.0",
     "flexbox-react": "^4.4.0",
     "history": "^4.6.3",
     "moment": "^2.18.1",
